update iTerm settings

--- a/.iterm2/com.googlecode.iterm2.plist
+++ b/.iterm2/com.googlecode.iterm2.plist
@@ -1163,7 +1163,7 @@
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Workspace/dotfile</string>
+	<string>~/Documents</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{865, 448}</string>
 	<key>NSNavPanelExpandedSizeForSaveMode</key>
@@ -1202,9 +1202,9 @@
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>814 184 620 392 0 0 1920 1058 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
-	<string>269 139 606 456 0 0 1920 1057 </string>
+	<string>269 139 606 456 0 0 1920 1058 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>167 379 937 465 0 0 1920 1058 </string>
+	<string>167 411 937 465 0 0 1920 1058 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>1270 0 650 1058 0 0 1920 1058 </string>
 	<key>New Bookmarks</key>
@@ -2556,7 +2556,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-03-26T11:01:23Z</date>
+	<date>2017-04-06T11:13:07Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -2585,7 +2585,7 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.14</string>
+	<string>3.0.15</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
 	<integer>0</integer>
 	<key>kCPKSelectionViewShowHSBTextFieldsKey</key>
