--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *~
 .#*
 .DS_Store
-.vim/bundle
-.vim/undotree
-.vimlocal
+.vim
+!.vim/after
+!.vim/vimrc
+!.vim/update.sh
+!.vim/update_packages.sh
