--- a/.tmuxp/remote.yaml
+++ b/.tmuxp/remote.yaml
@@ -4,16 +4,15 @@ windows:
   - window_name: remote
     focus: true
     layout: even-horizontal
-    shell_command_before:
-      - command -v echo $remote >/dev/null 2>&1 || { ssh "$remote" }
     panes:
       - shell_command:
           - clear
-        focus: true
-      - shell_command:
+          - tmux split-window -h -t 0.0
           - tmux split-window -v -t 0.1
           - tmux select-pane -t 0.0
+          - tpcall "ssh-remote"
           - clear
+        focus: true
   - window_name: local
     layout: tiled
     shell_command_before:
