add 'ffk' as alias to load tmuxp with ssh remote host

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -g default-command 'zsh'
 # set default terminal
 set -g default-terminal "screen-256color"
 
+# update env
+set-option -ga update-environment " REMOTE"
+
 # Use T as the leader key, not B
 unbind "C-b"
 set -g prefix "C-t"
