add travis_on alias and add remote-to-user-namespace in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -g default-command 'zsh'
 # set default terminal
 set -g default-terminal "screen-256color"
 
+# use reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
 # update env
 set-option -ga update-environment " REMOTE"
 
@@ -94,3 +97,20 @@ set -g message-command-bg colour233
 set -g message-command-fg black
 set -g mode-bg colour39
 set -g mode-fg colour232
+
+# # Plugin list
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+
+# # Plugin settings
+# set -g @continuum-restore 'on'
+# if-shell 'test "$(uname)" = "Darwin"' 'set -g @continuum-boot-options "iterm,fullscreen"'
+
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# # prefix + I: Installs new plugins and Refreshes TMUX environment
+# # prefix + U: updates plugin(s)
+# # prefix + alt + u: remove/uninstall plugins not on the plugin list
+# run '$HOME/.tmux/plugins/tpm/tpm'
