--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,8 @@ set -g default-command 'zsh'
 set -g default-terminal "screen-256color"
 
 # use reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+if-shell 'test "$(uname)" = "Darwin"' \
+  'set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # update env
 set-option -ga update-environment " REMOTE"
