--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,8 @@ bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
-bind "n" next-window
-bind "p" previous-window
+# bind "n" next-window
+# bind "p" previous-window
 bind "C-n" next-window
 bind "C-p" previous-window
 bind "s" split-window -v
@@ -63,9 +63,13 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X stop-selection
 if-shell 'test "$(uname)" = "Darwin"' \
   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"; \
   bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"'
+# if-shell 'test "$(uname)" = "Linux"' \
+#   'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"; \
+#   bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"'
 if-shell 'test "$(uname)" = "Linux"' \
-  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"; \
-  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"'
+  'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i-b"; \
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"; \
+  bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"'
 
 # Double clicking selects the word also when not in copy-mode.
 bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
