--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,9 @@ bind "C-t" last-window
 bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
+# split debug pane
+bind "d" split-window -v -p 20
+
 # Vim-like bindings
 setw -g mode-keys vi
 # bind "n" next-window
