update split 20% pane keybindings in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,9 +27,7 @@ bind "C-t" last-window
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
-
-# split debug pane
-bind "d" split-window -v -p 20
+bind "r" source-file "$HOME/.tmux.conf"
 
 # Vim-like bindings
 setw -g mode-keys vi
@@ -37,8 +35,14 @@ setw -g mode-keys vi
 # bind "p" previous-window
 bind "C-n" next-window
 bind "C-p" previous-window
+
 bind "s" split-window -v
 bind "v" split-window -h
+bind-key "S" split-window -v -p 20
+bind-key "V" split-window -h -p 20
+bind-key "M-s" split-window -v -p 20
+bind-key "M-v" split-window -h -p 20
+
 bind "j" select-pane -D
 bind "k" select-pane -U
 bind "h" select-pane -L
@@ -47,6 +51,15 @@ bind -r "C-j" select-pane -D
 bind -r "C-k" select-pane -U
 bind -r "C-h" select-pane -L
 bind -r "C-l" select-pane -R
+bind-key -r "J" resize-pane -D 5
+bind-key -r "K" resize-pane -U 5
+bind-key -r "H" resize-pane -L 5
+bind-key -r "L" resize-pane -R 5
+bind-key "M-j" resize-pane -D
+bind-key "M-k" resize-pane -U
+bind-key "M-h" resize-pane -L
+bind-key "M-l" resize-pane -R
+
 bind "=" select-layout tiled
 bind "!" break-pane
 bind \; choose-tree
