--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # start a non-login shell by default for each new window
 set -g default-command 'zsh'
 
+# set escape time
+set-option -sg escape-time 10
+
 # set default terminal
 set -g default-terminal "screen-256color"
 
