update yapf style && add tmux keybinding for new window/pane with sshh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,26 +26,32 @@ set -g mouse on
 
 bind "C-d" detach
 bind "C-t" last-window
+bind "C-r" source-file "$HOME/.tmux.conf"
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
-bind "g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
-bind "C-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
-bind "r" source-file "$HOME/.tmux.conf"
+bind "©" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind "ß" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+bind "M-g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind "M-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
-# bind "n" next-window
-# bind "p" previous-window
-bind "C-n" next-window
-bind "C-p" previous-window
+bind "n" next-window
+bind "p" previous-window
 
-bind "s" split-window -v
-bind "v" split-window -h
-bind-key "S" split-window -v -p 20
-bind-key "V" split-window -h -p 20
-bind-key "M-s" split-window -v -p 20
-bind-key "M-v" split-window -h -p 20
+# open new window/pane
+bind "c" new-window -c "#{pane_current_path}"
+bind "s" split-window -v -c "#{pane_current_path}"
+bind "v" split-window -h -c "#{pane_current_path}"
+bind-key "S" split-window -v -p 20 -c "#{pane_current_path}"
+bind-key "V" split-window -h -p 20 -c "#{pane_current_path}"
 
+# open new window/pane with last ssh session
+bind "C-s" split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+bind "C-v" split-window -h "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+bind "C-c" new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\" print}' | tail -1)"
+
+# select and resize pane
 bind "j" select-pane -D
 bind "k" select-pane -U
 bind "h" select-pane -L
@@ -58,10 +64,6 @@ bind-key -r "J" resize-pane -D 5
 bind-key -r "K" resize-pane -U 5
 bind-key -r "H" resize-pane -L 5
 bind-key -r "L" resize-pane -R 5
-bind-key "M-j" resize-pane -D
-bind-key "M-k" resize-pane -U
-bind-key "M-h" resize-pane -L
-bind-key "M-l" resize-pane -R
 
 bind "=" select-layout tiled
 bind "!" break-pane
