--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,10 @@ bind-key "V" split-window -h -p 20 -c "#{pane_current_path}"
 # open new window/pane with last ssh session
 bind "C-s" split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
 bind "C-v" split-window -h "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
-bind "C-c" new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\" print}' | tail -1)"
+bind "C-c" new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+# bind "C-s" split-window -v "$(tssh)"
+# bind "C-v" split-window -h "$(tssh)"
+# bind "C-c" new-window "$(tssh)"
 
 # select and resize pane
 bind "j" select-pane -D
