--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,21 @@ setw -g mode-keys vi
 bind "n" next-window
 bind "p" previous-window
 
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+
 # open new window/pane
 bind "c" new-window -c "#{pane_current_path}"
 bind "s" split-window -v -c "#{pane_current_path}"
@@ -55,14 +70,10 @@ bind "C-c" new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VA
 # bind "C-c" new-window "$(tssh)"
 
 # select and resize pane
-bind "j" select-pane -D
-bind "k" select-pane -U
-bind "h" select-pane -L
-bind "l" select-pane -R
-bind -r "C-j" select-pane -D
-bind -r "C-k" select-pane -U
-bind -r "C-h" select-pane -L
-bind -r "C-l" select-pane -R
+bind -r "j" select-pane -D
+bind -r "k" select-pane -U
+bind -r "h" select-pane -L
+bind -r "l" select-pane -R
 bind-key -r "J" resize-pane -D 5
 bind-key -r "K" resize-pane -U 5
 bind-key -r "H" resize-pane -L 5
