--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,12 +11,9 @@ set -g default-terminal "screen-256color"
 if-shell 'test "$(uname)" = "Darwin"' \
   'set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
 
-# update env
-set-option -ga update-environment " REMOTE"
-
 # Use T as the leader key, not B
-unbind "C-b"
-set -g prefix "C-t"
+unbind C-b
+set -g prefix C-t
 bind "t" send-prefix
 
 set -g bell-action none
@@ -24,15 +21,15 @@ set -g visual-bell off
 set -g display-panes-time 2000
 set -g mouse on
 
-bind "C-d" detach
-bind "C-t" last-window
-bind "C-r" source-file "$HOME/.tmux.conf"
+bind C-d detach
+bind C-t last-window
+bind C-r source-file "$HOME/.tmux.conf"
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "©" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
 bind "ß" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
-bind "M-g" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
-bind "M-s" command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
+bind M-g command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
+bind M-s command-prompt -p "Send pane to:"  "join-pane -t ':%%'"
 
 # Vim-like bindings
 setw -g mode-keys vi
@@ -54,6 +51,12 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
+# resize pane
+bind-key -r C-h resize-pane -L 5
+bind-key -r C-j resize-pane -D 5
+bind-key -r C-k resize-pane -U 5
+bind-key -r C-l resize-pane -R 5
+
 # open new window/pane
 bind "c" new-window -c "#{pane_current_path}"
 bind "s" split-window -v -c "#{pane_current_path}"
@@ -62,22 +65,12 @@ bind-key "S" split-window -v -p 20 -c "#{pane_current_path}"
 bind-key "V" split-window -h -p 20 -c "#{pane_current_path}"
 
 # open new window/pane with last ssh session
-bind "C-s" split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
-bind "C-v" split-window -h "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
-bind "C-c" new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+bind C-s split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+bind C-v split-window -h "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
+bind C-c new-window "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}' | tail -1)"
 # bind "C-s" split-window -v "$(tssh)"
 # bind "C-v" split-window -h "$(tssh)"
 # bind "C-c" new-window "$(tssh)"
-
-# select and resize pane
-bind -r "j" select-pane -D
-bind -r "k" select-pane -U
-bind -r "h" select-pane -L
-bind -r "l" select-pane -R
-bind-key -r "J" resize-pane -D 5
-bind-key -r "K" resize-pane -U 5
-bind-key -r "H" resize-pane -L 5
-bind-key -r "L" resize-pane -R 5
 
 bind "=" select-layout tiled
 bind "!" break-pane
