add true color support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set-option -sg escape-time 10
 
 # set default terminal
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ',screen-256color:Tc'
 
 # use reattach-to-user-namespace
 if-shell 'test "$(uname)" = "Darwin"' \
