--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,13 @@
 # start a non-login shell by default for each new window
 set -g default-command 'zsh'
 
-# set escape time
+# Makes vim happy
 set-option -sg escape-time 10
 
 # set default terminal
-set -g default-terminal "screen-256color"
 set -ga terminal-overrides ',screen-256color:Tc'
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ',screen*:sitm=\E[3m'
 
 # use reattach-to-user-namespace
 if-shell 'test "$(uname)" = "Darwin"' \
@@ -17,14 +18,19 @@ unbind C-b
 set -g prefix C-t
 bind "t" send-prefix
 
-set -g bell-action none
-set -g visual-bell off
+# don't bother me
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
 set -g display-panes-time 2000
 set -g mouse on
 
 bind C-d detach
 bind C-t last-window
-bind C-r source-file "$HOME/.tmux.conf"
+bind r source-file "$HOME/.tmux.conf"
 
 # Join pane command - https://unix.stackexchange.com/a/14301/16225
 bind "©" command-prompt -p "Join pane from:"  "join-pane -s ':%%'"
@@ -40,7 +46,7 @@ bind "p" previous-window
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|ssh|mosh?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
@@ -51,6 +57,14 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
+# restoring clearing screen
+bind-key C-r send-keys C-l
+
+# fallback for selecting pane
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # resize pane
 bind-key -r C-h resize-pane -L 5
@@ -104,11 +118,14 @@ if-shell 'test "$(uname)" = "Linux"' \
 bind-key -T root DoubleClick1Pane  select-pane \; copy-mode \; send-keys -X select-word
 
 # Colors - derived from Powerline Double Cyan by Jim Myhrberg
+# status line
+set -g status-justify centre
 set -g status-interval 0
 set -g status-fg colour240
 set -g status-bg colour233
 set -g status-left "#[fg=colour242] #{host} "
 set -g status-right "#[fg=colour242]:#{session_name}:#{window_index}.#{pane_index} "
+# window status
 set -g window-status-format "#[bg=colour233,fg=colour240]  ⋅#I⋅ #W "
 set -g window-status-current-format "#[bg=colour233,fg=colour240,nobold] 《#I》#W #[fg=black,bg=colour233,nobold]"
 set -g window-status-current-bg colour39
@@ -116,7 +133,7 @@ set -g window-status-current-fg colour235
 set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
 set -g window-status-activity-fg colour233 # a bug in tmux
 set -g window-status-separator ""
-set -g status-justify centre
+# pane
 set -g pane-border-bg default
 set -g pane-border-fg colour238
 set -g pane-active-border-bg default
@@ -125,6 +142,7 @@ set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour39
 set -g clock-mode-style 24
+# message
 set -g message-bg black
 set -g message-fg colour39
 set -g message-command-bg colour233
