add pyannotate and jsbeautifier

--- a/.postinstall/scripts/requirements.txt
+++ b/.postinstall/scripts/requirements.txt
@@ -1,11 +1,13 @@
 # python linters and formatters
 autopep8
+flake8
 isort
 jedi
+jsbeautifier
 mccabe
 mypy
 prospector
-flake8
+pyannotate
 pylama
 pylint
 rope
