--- a/.gitconfig.example
+++ b/.gitconfig.example
@@ -1,9 +1,8 @@
 [core]
 	editor = nvim
+	excludesfile = ~/.gitignore
 [push]
 	default = simple
 [user]
 	name = corenel
 	email = xxdsox@gmail.com
-; [http]
-    ; proxy = http://127.0.0.1:6152
