--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,10 +61,10 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 bind-key C-r send-keys C-l
 
 # fallback for selecting pane
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
 
 # resize pane
 bind-key -r C-h resize-pane -L 5
