--- a/.aria2/aria2.conf
+++ b/.aria2/aria2.conf
@@ -1,6 +1,9 @@
 ## '#'开头为注释内容, 选项都有相应的注释说明, 根据需要修改 ##
 ## 被注释的选项填写的是默认值, 建议在需要修改时再取消注释  ##
 
+## disable certification
+check-certificate=false
+
 ## 文件保存相关 ##
 
 # 文件的保存路径(可使用绝对路径或相对路径), 默认: 当前启动位置
