--- a/.postinstall/macos/.iterm2/com.googlecode.iterm2.plist
+++ b/.postinstall/macos/.iterm2/com.googlecode.iterm2.plist
@@ -1528,7 +1528,7 @@
 	gAKACoAN0xAJChEVGVdOUy5rZXlzoxITFIADgASABaMWFxiABoAHgAiACVpJZGVudGlm
 	aWVyVVdpZHRoVkhpZGRlblEwI0BowAAAAAAACNIhIiMkWiRjbGFzc25hbWVYJGNsYXNz
 	ZXNcTlNEaWN0aW9uYXJ5oiMlWE5TT2JqZWN00xAJCicrGaMSExSAA4AEgAWjLC0YgAuA
-	DIAIgAlRMSNAc7Gdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
+	DIAIgAlRMSNAdKGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
 	TlNLZXllZEFyY2hpdmVy0Tg5VUFycmF5gAEACAARABoAIwAtADIANwBGAEwAUQBcAGMA
 	ZgBoAGoAbABzAHsAfwCBAIMAhQCJAIsAjQCPAJEAnACiAKkAqwC0ALUAugDFAM4A2wDe
 	AOcA7gDyAPQA9gD4APwA/gEAAQIBBAEGAQ8BFAEjAScBLwFBAUQBSgAAAAAAAAIBAAAA
@@ -1546,10 +1546,12 @@
 	<true/>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>507 148 1028 103 0 0 1920 1080 </string>
+	<key>NSWindow Frame SessionsPreferences</key>
+	<string>2189 -714 606 469 1920 -840 1080 1920 </string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>805 230 1018 447 0 0 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1920 -840 650 550 1920 -840 1080 1920 </string>
+	<string>1920 -840 1080 1898 1920 -840 1080 1898 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -2883,6 +2885,8 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>7218B629-93E9-4BA5-8ADB-A41530780AA3</string>
+	<key>NoSyncPermissionToShowTip</key>
+	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>535707988.21908301</real>
 	<key>OpenArrangementAtStartup</key>
@@ -2947,7 +2951,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-12-23T13:06:22Z</date>
+	<date>2018-01-15T05:11:28Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -7290,6 +7294,8 @@
 	<string>/-+\~_.</string>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
